Add controller/html.erb pages for home, gallery, about, contact

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<% provide(:title, "About") %>
+
+<h1>About</h1>
+<p> Born in 19XX in XX, NY, XX found a passion and talent for art early in life. Through elementary to high school, XX remained 
+enthusiastic about art, constantly improving her portraiture and figure drawing skills</p>
