--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#gallery</h1>
-<p>Find me in app/views/pages/gallery.html.erb</p>
+<% provide(:title, "Gallery") %>
+
+<h1>Gallery</h1>
+<p>Below, XX's artwork can be found, organized by type (landscape, figure drawing, etc.)</p>
