--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+
+<h1>Home</h1>
+<p>This site showcases the art of XX. A portfolio of her work can be found on the 'Gallery' page</p>
