--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
         <%= link_to "artsite app", '#', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",   '#' %></li>
-            <li><%= link_to "About",   '#' %></li>
-            <li><%= link_to "Gallery", '#' %></li>
-            <li><%= link_to "Contact", '#' %></li>
+            <li><%= link_to "Home",   root_path %></li>
+            <li><%= link_to "About",   about_path %></li>
+            <li><%= link_to "Gallery", gallery_path %></li>
+            <li><%= link_to "Contact", contact_path %></li>
           </ul>
         </nav>
       </div>
