--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Home") %>
+<% provide(:title, "XX Art") %>
 
-<h1>Home</h1>
+<h1>Art of XX</h1>
 <p>This site showcases the art of XX. A portfolio of her work can be found on the 'Gallery' page</p>
