--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -6,5 +6,5 @@
  <nav>
     <li><%= link_to "Landscapes", landscapes_path %></li>
     <li><%= link_to "Portraits",   portraits_path %></li>
-    <li><%= link_to "Stilllives", stilllifes_path %></li>
+    <li><%= link_to "Still lifes", stilllifes_path %></li>
 </nav>
