--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -2,9 +2,9 @@
 
 <h1>Gallery</h1>
 <p>Below, XX's artwork can be found, organized by type (landscape, figure drawing, etc.)</p>
-<p>Host images on flickr? </p>
- <nav>
-    <li><%= link_to "Landscapes", landscapes_path %></li>
-    <li><%= link_to "Portraits",   portraits_path %></li>
-    <li><%= link_to "Still lifes", stilllifes_path %></li>
-</nav>
+<%= link_to "Landscapes", landscapes_path %>
+<%= link_to "Portraits",   portraits_path %>
+<%= link_to "Still lifes", stilllifes_path %>
+<%= link_to "Drawings", drawings_path %>
+<%= link_to "Photography", photography_path %>
+<%= link_to "Figures", figures_path %>
