--- a/app/views/gallery/stilllifes.html.erb
+++ b/app/views/gallery/stilllifes.html.erb
@@ -1,4 +1,72 @@
 <% provide(:title, "Still lifes") %>
 
-<h1>Gallery#stilllifes</h1>
-<p>Find me in app/views/gallery/stilllifes.html.erb</p>
+<html>
+<head>
+<style>
+div.img {
+    margin: 20px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+</style>
+</head>
+<body>
+
+<!-- thumbnail image gallery: http://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_img_thumbnail2&stacked=h -->
+<div class="container">
+    <h2>Thumbnail</h2>
+  <%= image_tag("drawing-dog.jpg", class:"img-thumbnail", alt:"Cinque Terre", width:"304", height:"300") %> 
+</div>
+
+<!--
+<div class="container">
+  <p> Here </p>
+<%= image_tag "drawing-dog.jpg" %>
+</div>
+
+<div class="img">
+  <a target="_blank" href="drawing-dog.jpg">
+    <img src="drawing-dog.jpg" alt="Fjords" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="img_forest.jpg">
+    <img src="img_forest.jpg" alt="Forest" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="lights.jpg">
+    <img src="img_lights.jpg" alt="Northern Lights" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+
+<div class="img">
+  <a target="_blank" href="img_mountains.jpg">
+    <img src="img_mountains.jpg" alt="Mountains" width="300" height="200">
+  </a>
+  <div class="desc">Add a description of the image here</div>
+</div>
+-->
+
+</body>
+</html> 
