Updated with chosen image gallery on Gallery#Landscapes page. Updated stylesheets

--- a/app/assets/stylesheets/gallery.scss
+++ b/app/assets/stylesheets/gallery.scss
@@ -12,6 +12,11 @@ h1 {
 body {
 	text-align: left;
 	padding-top: 60px;
+  	background: #787878;
+}
+
+a {
+	color: black;
 }
 
 p {
@@ -30,4 +35,17 @@ section {
 
 .center h1 {
   margin-bottom: 10px;
+}
+
+html body { background: #787878; }
+
+.slides {
+	background: #787878;
+}
+
+.navbar {
+}
+
+.id {
+	background: #787878;
 }
