--- a/app/views/gallery/stilllifes.html.erb
+++ b/app/views/gallery/stilllifes.html.erb
@@ -30,43 +30,22 @@ div.desc {
 <!-- thumbnail image gallery: http://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_img_thumbnail2&stacked=h -->
 <div class="container">
     <h2>Thumbnail</h2>
-  <%= image_tag("drawing-dog.jpg", class:"img-thumbnail", alt:"Cinque Terre", width:"304", height:"300") %> 
+  <%= image_tag("drawing-dog.jpg", class:"img-thumbnail", alt:"Dog", width:"304", height:"300") %> 
 </div>
-
-<!--
-<div class="container">
-  <p> Here </p>
-<%= image_tag "drawing-dog.jpg" %>
-</div>
-
-<div class="img">
-  <a target="_blank" href="drawing-dog.jpg">
-    <img src="drawing-dog.jpg" alt="Fjords" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="img">
-  <a target="_blank" href="img_forest.jpg">
-    <img src="img_forest.jpg" alt="Forest" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="img">
-  <a target="_blank" href="lights.jpg">
-    <img src="img_lights.jpg" alt="Northern Lights" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="img">
-  <a target="_blank" href="img_mountains.jpg">
-    <img src="img_mountains.jpg" alt="Mountains" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
--->
 
 </body>
 </html> 
+
+<!--
+<div id="links">
+    <a href="images/drawing-dog.jpg" title="Banana" data-gallery>
+        <%= image_tag("drawing-dog.jpg", size: "40x60", alt: "Wiif")%>
+    </a>
+    <a href="images/portrait-bro.jpg" title="Apple" data-gallery>
+        <%= image_tag("portrait-bro.jpg", size: "40x60", alt: "Wiif")%>
+    </a>
+    <a href="images/portrait-lass.jpg" title="Orange" data-gallery>
+        <%= image_tag("portrait-lass.jpg", size: "40x60", alt: "Wiif")%>
+    </a>
+</div>
+-->
