--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,23 +1,31 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
 h1 {
-  	font-size: 4em;
-  	letter-spacing: -1.5px;
-  	margin-bottom: 30px;
+  font-size: 4em;
+  letter-spacing: -1.5px;
+  margin-bottom: 30px;
 	line-height: 1.0;
 	text-align: left;
 }
 
+
 body {
 	text-align: left;
 	padding-top: 60px;
+  background: #787878;
 }
 
 p {
 	font-size: 1em;
 	letter-spacing: -1px;
-	line-height: 0.5
+	line-height: 0.5;
 }
 
 section {
@@ -34,4 +42,14 @@ textarea {
 
 .center h1 {
   margin-bottom: 10px;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
 }
