--- a/app/views/gallery/portraits.html.erb
+++ b/app/views/gallery/portraits.html.erb
@@ -1,2 +1,73 @@
-<h1>Gallery#portraits</h1>
-<p>Find me in app/views/gallery/portraits.html.erb</p>
+<% provide(:title, "Portraits") %>
+
+<html>
+<head>
+<style>
+div.img {
+    margin: 20px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.img:hover {
+    border: 1px solid #777;
+}
+
+div.img img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+</style>
+</head>
+<body>
+
+<div class="container">
+  <h2>Image Gallery</h2>
+  <p>The .thumbnail class can be used to display an image gallery. Click on the images to see it in full size:</p>            
+  <div class="row">
+    <div class="col-md-4">
+      <a href="portrait-bro.jpg" class="thumbnail">
+        <p> "Bro in Chair", oil </p>    
+        <!-- <%= asset_path('portrait-bro.jpg') %> -->
+        <%= image_tag("portrait-bro.jpg", alt:"Bro in Chair", style:"width:150px;height:150px") %>
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="portrait-lass.jpg" class="thumbnail">
+        <p> "Face of a lass", oil </p>
+        <!-- <%= asset_path('portrait-lass.jpg') %> -->
+        <%= image_tag("portrait-lass.jpg", alt:"Girl portrait", style:"width:150px;height:150px") %>
+      </a>
+    </div>
+    <div class="col-md-4">
+      <a href="portrait-steve.jpg" class="thumbnail">
+        <p> "Another portrait", oil </p>      
+        <!-- <%= asset_path('portrait-steve.jpg') %> -->
+        <%= image_tag("portrait-steve.jpg", alt:"Another portrait", style:"width:150px;height:150px") %>       
+      </a>
+    </div>
+  </div>
+</div>
+
+</body>
+</html> 
+
+<!--
+<div id="links">
+    <a href="images/drawing-dog.jpg" title="Banana" data-gallery>
+        <%= image_tag("drawing-dog.jpg", size: "40x60", alt: "Wiif")%>
+    </a>
+    <a href="images/portrait-bro.jpg" title="Apple" data-gallery>
+        <%= image_tag("portrait-bro.jpg", size: "40x60", alt: "Wiif")%>
+    </a>
+    <a href="images/portrait-lass.jpg" title="Orange" data-gallery>
+        <%= image_tag("portrait-lass.jpg", size: "40x60", alt: "Wiif")%>
+    </a>
+</div>
+-->
