Updated gallery action views

--- a/app/views/gallery/drawings.html.erb
+++ b/app/views/gallery/drawings.html.erb
@@ -1,15 +1,9 @@
 <% provide(:title, "Drawings") %>
 
-<h1>Gallery#drawings</h1>
-<p>Find me in app/views/gallery/drawings.html.erb</p>
+<header>
+  <h1>Drawings</h1>
+</header>
 
-<%= link_to image_tag("drawing-dog.jpg", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
-
-<%= link_to image_tag("figure-bed.jpg", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
-
-<!--
 <div id="links">
     <a href="images/drawing-dog.jpg" title="Banana" data-gallery>
         <%= image_tag("drawing-dog.jpg", size: "40x60", alt: "Wiif")%>
@@ -21,4 +15,3 @@
         <%= image_tag("portrait-lass.jpg", size: "40x60", alt: "Wiif")%>
     </a>
 </div>
--->
