--- a/app/views/gallery/figures.html.erb
+++ b/app/views/gallery/figures.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, "Figures") %>
 
-<h1>Gallery#figures</h1>
-<p>Find me in app/views/gallery/figures.html.erb</p>
+<header>
+  <h1>Figures</h1>
+</header>
 
-<!--
 <div id="links">
     <a href="images/drawing-dog.jpg" title="Banana" data-gallery>
         <%= image_tag("drawing-dog.jpg", size: "40x60", alt: "Wiif")%>
@@ -15,4 +15,3 @@
         <%= image_tag("portrait-lass.jpg", size: "40x60", alt: "Wiif")%>
     </a>
 </div>
--->
