--- a/app/views/gallery/figures.html.erb
+++ b/app/views/gallery/figures.html.erb
@@ -3,13 +3,13 @@
 <h1>Figures</h1>
 
 <div id="links">
-    <a href="images/drawing-dog.jpg" title="Banana" data-gallery>
+    <a href="images/drawing-dog.jpg" title="Dog" data-gallery>
         <%= image_tag("drawing-dog.jpg", size: "40x60", alt: "Wiif")%>
     </a>
-    <a href="images/portrait-bro.jpg" title="Apple" data-gallery>
+    <a href="images/portrait-bro.jpg" title="Boy" data-gallery>
         <%= image_tag("portrait-bro.jpg", size: "40x60", alt: "Wiif")%>
     </a>
-    <a href="images/portrait-lass.jpg" title="Orange" data-gallery>
+    <a href="images/portrait-lass.jpg" title="Girl" data-gallery>
         <%= image_tag("portrait-lass.jpg", size: "40x60", alt: "Wiif")%>
     </a>
 </div>
