--- a/app/assets/stylesheets/gallery.scss
+++ b/app/assets/stylesheets/gallery.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 h1 {
-  	font-size: 4em;
+  	font-size: 250%;
   	letter-spacing: -1.5px;
   	margin-bottom: 30px;
 	line-height: 1.0;
@@ -12,7 +12,7 @@ h1 {
 body {
 	text-align: left;
 	padding-top: 60px;
-  	background: #787878;
+  	background: #0099FF;
 }
 
 a {
@@ -37,15 +37,15 @@ section {
   margin-bottom: 10px;
 }
 
-html body { background: #787878; }
+html body { background: #0099FF; }
 
 .slides {
-	background: #787878;
+	background: #0099FF;
 }
 
 .navbar {
 }
 
 .id {
-	background: #787878;
+	background: #0099FF;
 }
