Updated site background color

--- a/app/assets/stylesheets/gallery.scss
+++ b/app/assets/stylesheets/gallery.scss
@@ -12,7 +12,7 @@ h1 {
 body {
 	text-align: left;
 	padding-top: 60px;
-  	background: #0099FF;
+  	background: #87CEEB;
 }
 
 a {
@@ -47,15 +47,15 @@ section {
   margin-bottom: 10px;
 }
 
-html body { background: #0099FF; }
+html body { background: #87CEEB; }
 
 .slides {
-	background: #0099FF;
+	background: #87CEEB;
 }
 
 .navbar {
 }
 
 .id {
-	background: #0099FF;
+	background: #87CEEB;
 }
